Adicionando nova rota para listagem de usuário
